--- a/dd2a587f-bd49-56af-9097-8fc4b1f9cef1/index.html
+++ b/dd2a587f-bd49-56af-9097-8fc4b1f9cef1/index.html
@@ -4,101 +4,47 @@
 .dRgrav ul li{position:relative;height:50px;}/*!sc*/
 .dRgrav ul li:hover{background:#f4f4f4;}/*!sc*/
 .dRgrav ul li a{position:absolute;top:0;left:0;right:0;bottom:0;line-height:30px;-webkit-text-decoration:none;text-decoration:none;padding:10px;color:#333;}/*!sc*/
-.dRgrav ul li a.active{font-weight:bold;color:var(--theme-color);}/*!sc*/
+.dRgrav ul li a.active{font-weight:bold;}/*!sc*/
 data-styled.g1[id="menu__Wrapper-mgbnnx-0"]{content:"dRgrav,"}/*!sc*/
-.bVotRQ{height:100vh;}/*!sc*/
-.bVotRQ .header{padding:20px;border-bottom:1px #bbb solid;}/*!sc*/
+.bVotRQ{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;height:100vh;}/*!sc*/
+.bVotRQ .header{padding:20px;border-bottom:1px #bbb solid;-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;}/*!sc*/
 .bVotRQ .header h1{margin:0px;}/*!sc*/
-.bVotRQ .split{width:100%;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;}/*!sc*/
+.bVotRQ .split{-webkit-flex:auto;-ms-flex:auto;flex:auto;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;}/*!sc*/
 .bVotRQ .split-left{width:350px;border-right:1px solid #bbb;}/*!sc*/
 .bVotRQ .split-right{-webkit-flex:auto;-ms-flex:auto;flex:auto;}/*!sc*/
 data-styled.g2[id="page__Layout-sc-1jl1kxb-0"]{content:"bVotRQ,"}/*!sc*/
-.cOTzMu .editor{position:relative;height:500px;overflow:scroll;}/*!sc*/
-.cOTzMu .editor .title{width:60px;height:20px;position:absolute;top:-20px;left:0;z-index:4;line-height:20px;text-align:center;background:white;color:var(--theme-color);}/*!sc*/
-.cOTzMu .editor .sync{position:absolute;padding:10px;top:0;left:0;bottom:0;width:100%;height:3000px;margin:0;font-family:Consolas,Monaco,"Andale Mono","Ubuntu Mono",monospace;white-space:pre-wrap;line-height:1.5em;word-wrap:break-word;font-size:16px;}/*!sc*/
-.cOTzMu .editor textarea{resize:none;color:transparent;background:transparent;caret-color:red;border:none;outline:none;z-index:3;}/*!sc*/
-.cOTzMu .editor pre{overflow-y:scroll;font-size:16px;overflow:auto;}/*!sc*/
-data-styled.g3[id="codeEditor__Wrapper-c239u8-0"]{content:"cOTzMu,"}/*!sc*/
+.kftknV{position:relative;width:100%;height:100%;overflow:auto;}/*!sc*/
+.kftknV > div{position:absolute;top:0;left:0;right:0;bottom:0;}/*!sc*/
+data-styled.g3[id="page__ScrollWrapper-sc-1jl1kxb-1"]{content:"kftknV,"}/*!sc*/
+.cOTzMu{height:400px;background:black;overflow:scroll;}/*!sc*/
+.cOTzMu .editor{position:relative;}/*!sc*/
+.cOTzMu .editor .sync{padding:10px;margin:0;font-family:Consolas,Monaco,"Andale Mono","Ubuntu Mono",monospace;white-space:pre-wrap;line-height:1.5em;word-wrap:break-word;font-size:16px;}/*!sc*/
+.cOTzMu .editor textarea{position:absolute;top:0;left:0;width:100%;height:100%;resize:none;color:transparent;background:transparent;caret-color:red;border:none;outline:none;}/*!sc*/
+.cOTzMu .editor pre{position:relative;pointer-events:none;}/*!sc*/
+data-styled.g4[id="codeEditor__Wrapper-c239u8-0"]{content:"cOTzMu,"}/*!sc*/
 .vTpej{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;margin:60px 0px;}/*!sc*/
 .vTpej *{box-sizing:border-box;}/*!sc*/
 .vTpej .left{width:100%;margin-right:20px;}/*!sc*/
 .vTpej .right{width:100%;background:white;}/*!sc*/
 .vTpej .right iframe{border:none;width:100%;height:100%;}/*!sc*/
-data-styled.g4[id="liveEditor__Wrapper-pk3rpr-0"]{content:"vTpej,"}/*!sc*/
+data-styled.g5[id="liveEditor__Wrapper-pk3rpr-0"]{content:"vTpej,"}/*!sc*/
 .hEGkZd h1,.hEGkZd h2,.hEGkZd h3,.hEGkZd h4{color:var(--theme-color);}/*!sc*/
-data-styled.g5[id="markdown__Wapper-r4y4ur-0"]{content:"hEGkZd,"}/*!sc*/
-</style><link as="script" rel="preload" href="/css-traning-book/webpack-runtime-e37454bbe190af58e03b.js"/><link as="script" rel="preload" href="/css-traning-book/framework-16534ddc5a576711dd15.js"/><link as="script" rel="preload" href="/css-traning-book/styles-2c8cc638826070126d54.js"/><link as="script" rel="preload" href="/css-traning-book/app-424ad1c5c963d9d96c97.js"/><link as="script" rel="preload" href="/css-traning-book/9f96d65d-ac4e9b326d079790e9ed.js"/><link as="script" rel="preload" href="/css-traning-book/commons-5000b7f97d5edcb2ad78.js"/><link as="script" rel="preload" href="/css-traning-book/component---src-templates-post-tsx-0e6772cb1f696542156d.js"/><link as="fetch" rel="preload" href="/css-traning-book/page-data/dd2a587f-bd49-56af-9097-8fc4b1f9cef1/page-data.json" crossorigin="anonymous"/><link as="fetch" rel="preload" href="/css-traning-book/page-data/app-data.json" crossorigin="anonymous"/></head><body><div id="___gatsby"><div style="outline:none" tabindex="-1" id="gatsby-focus-wrapper"><div class="page__Layout-sc-1jl1kxb-0 bVotRQ"><header class="header"><h1>CSS Traning</h1></header><div class="split"><div class="split-left"><div class="menu__Wrapper-mgbnnx-0 dRgrav"><div><h3>section.title</h3><ul><li><a href="/css-traning-book/ecb7009c-4298-51d4-a821-958542e839fb">右寄せにする方法</a></li><li><a href="/css-traning-book/6711d541-4b41-588e-b5b3-78d95fcb839f">右寄せにする方法</a></li><li><a href="/css-traning-book/38f24678-33b0-597b-8659-d87d948299ac">チェックボックスのスタイリング</a></li><li><a aria-current="page" class="active" href="/css-traning-book/dd2a587f-bd49-56af-9097-8fc4b1f9cef1">ボタンのスタイリング</a></li><li><a href="/css-traning-book/ab1ff15f-ca56-5c3b-a7ac-3014bc477566">比率でレイアウトを組む</a></li></ul></div><div><h3>section.title</h3><ul><li><a href="/css-traning-book/d11d396e-dbb1-5cbb-92d6-39fbc26ffe85">ブログとかの一覧画面</a></li></ul></div><div><h3>section.title</h3><ul><li><a href="/css-traning-book/6fbeba97-c9ff-585b-8bc3-a98897ce1991">失敗集</a></li></ul></div></div></div><div class="split-right"><div style="padding:40px"><div><h1></h1></div><div class="markdown__Wapper-r4y4ur-0 hEGkZd"></div><div><div class="liveEditor__Wrapper-pk3rpr-0 vTpej"><div class="left"><div class="codeEditor__Wrapper-c239u8-0 cOTzMu"><div class="editor"><div class="title">html</div><pre class="sync"><code class="language-html">&lt;div class=&quot;wrapper&quot;&gt;
-  &lt;button&gt;完了&lt;/button&gt;
-&lt;/div&gt;
-</code></pre><textarea class="sync">&lt;div class=&quot;wrapper&quot;&gt;
-  &lt;button&gt;完了&lt;/button&gt;
-&lt;/div&gt;
-</textarea></div></div><br/><div class="codeEditor__Wrapper-c239u8-0 cOTzMu"><div class="editor"><div class="title">css</div><pre class="sync"><code class="language-css">.wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-}
-
-button {
-  background: orange;
-  color: white;
-  font-weight: bold;
-  padding: 10px 20px;
-  border-radius: 4px;
-  border: none;
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
-}
-</code></pre><textarea class="sync">.wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-}
-
-button {
-  background: orange;
-  color: white;
-  font-weight: bold;
-  padding: 10px 20px;
-  border-radius: 4px;
-  border: none;
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
-}
-</textarea></div></div></div><div class="right"><iframe srcDoc="&lt;html&gt;&lt;style&gt;.wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-}
-
-button {
-  background: orange;
-  color: white;
-  font-weight: bold;
-  padding: 10px 20px;
-  border-radius: 4px;
-  border: none;
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
-}
-&lt;/style&gt;&lt;body&gt;&lt;div class=&quot;wrapper&quot;&gt;
-  &lt;button&gt;完了&lt;/button&gt;
-&lt;/div&gt;
-&lt;/body&gt;&lt;/html&gt;"></iframe></div></div></div><div class="markdown__Wapper-r4y4ur-0 hEGkZd"><h3>実装例 2</h3></div><div><div class="liveEditor__Wrapper-pk3rpr-0 vTpej"><div class="left"><div class="codeEditor__Wrapper-c239u8-0 cOTzMu"><div class="editor"><div class="title">html</div><pre class="sync"><code class="language-html">&lt;div&gt;こんにちは&lt;/div&gt;
+data-styled.g6[id="markdown__Wapper-r4y4ur-0"]{content:"hEGkZd,"}/*!sc*/
+</style><link as="script" rel="preload" href="/css-traning-book/webpack-runtime-c2ff342399fcbd9d78f0.js"/><link as="script" rel="preload" href="/css-traning-book/framework-16534ddc5a576711dd15.js"/><link as="script" rel="preload" href="/css-traning-book/styles-2c8cc638826070126d54.js"/><link as="script" rel="preload" href="/css-traning-book/app-424ad1c5c963d9d96c97.js"/><link as="script" rel="preload" href="/css-traning-book/9f96d65d-ac4e9b326d079790e9ed.js"/><link as="script" rel="preload" href="/css-traning-book/commons-2dfb79fc5f9804c33e43.js"/><link as="script" rel="preload" href="/css-traning-book/component---src-templates-post-tsx-0e6772cb1f696542156d.js"/><link as="fetch" rel="preload" href="/css-traning-book/page-data/dd2a587f-bd49-56af-9097-8fc4b1f9cef1/page-data.json" crossorigin="anonymous"/><link as="fetch" rel="preload" href="/css-traning-book/page-data/app-data.json" crossorigin="anonymous"/></head><body><div id="___gatsby"><div style="outline:none" tabindex="-1" id="gatsby-focus-wrapper"><div class="page__Layout-sc-1jl1kxb-0 bVotRQ"><header class="header"><h1>CSS Traning</h1></header><div class="split"><div class="split-left"><div class="menu__Wrapper-mgbnnx-0 dRgrav"><div><h3>section.title</h3><ul><li><a href="/css-traning-book/6711d541-4b41-588e-b5b3-78d95fcb839f">右寄せにする方法</a></li><li><a href="/css-traning-book/38f24678-33b0-597b-8659-d87d948299ac">チェックボックスのスタイリング</a></li><li><a href="/css-traning-book/ab1ff15f-ca56-5c3b-a7ac-3014bc477566">比率でレイアウトを組む</a></li><li><a href="/css-traning-book/ecb7009c-4298-51d4-a821-958542e839fb">中央寄せにする方法</a></li><li><a href="/css-traning-book/53c8f2ba-947d-5529-89df-6ff40bf3e13c">スクロールビュー</a></li><li><a href="/css-traning-book/78ec6489-963d-5db0-b57b-97994b74930b">グリッドレイアウト with Flexbox</a></li><li><a href="/css-traning-book/2c2c8630-1dc9-5fd4-b73f-2fbc33a39134">Flexboxでのレイアウト実装例</a></li><li><a aria-current="page" class="active" href="/css-traning-book/dd2a587f-bd49-56af-9097-8fc4b1f9cef1">ボタンのスタイリング</a></li></ul></div><div><h3>section.title</h3><ul><li><a href="/css-traning-book/d11d396e-dbb1-5cbb-92d6-39fbc26ffe85">ブログとかの一覧画面</a></li></ul></div><div><h3>section.title</h3><ul><li><a href="/css-traning-book/6fbeba97-c9ff-585b-8bc3-a98897ce1991">失敗集</a></li></ul></div></div></div><div class="split-right"><div class="page__ScrollWrapper-sc-1jl1kxb-1 kftknV"><div><div style="padding:40px"><div><h1></h1></div><div class="markdown__Wapper-r4y4ur-0 hEGkZd"><p>共通 CSS</p></div><div class="markdown__Wapper-r4y4ur-0 hEGkZd"><pre><code class="language-css">:root {
+  background: #f4f4f4;
+  padding: 40px;
+}</code></pre></div><div class="markdown__Wapper-r4y4ur-0 hEGkZd"><h3>実装例 2</h3></div><div><div class="liveEditor__Wrapper-pk3rpr-0 vTpej"><div class="left"><div class="codeEditor__Wrapper-c239u8-0 cOTzMu"><div class="editor"><pre class="sync"><code class="language-html">&lt;div&gt;こんにちは&lt;/div&gt;
 </code></pre><textarea class="sync">&lt;div&gt;こんにちは&lt;/div&gt;
-</textarea></div></div><br/><div class="codeEditor__Wrapper-c239u8-0 cOTzMu"><div class="editor"><div class="title">css</div><pre class="sync"><code class="language-css">div {
+</textarea></div></div><br/><div class="codeEditor__Wrapper-c239u8-0 cOTzMu"><div class="editor"><pre class="sync"><code class="language-css">div {
   background-color: tomato;
   width: 200px;
   height: 40px;
-
   color: white;
   font-weight: bold;
   text-align: center;
   line-height: 40px;
-
   border-radius: 20px;
   box-shadow: 0px 1px 7px rgba(0, 0, 0, 0.3);
-
   transition: 0.3s;
 }
 
@@ -110,15 +56,12 @@ div:hover {
   background-color: tomato;
   width: 200px;
   height: 40px;
-
   color: white;
   font-weight: bold;
   text-align: center;
   line-height: 40px;
-
   border-radius: 20px;
   box-shadow: 0px 1px 7px rgba(0, 0, 0, 0.3);
-
   transition: 0.3s;
 }
 
@@ -126,19 +69,20 @@ div:hover {
   opacity: 0.8;
   transform: scale(1.05, 1.05);
 }
-</textarea></div></div></div><div class="right"><iframe srcDoc="&lt;html&gt;&lt;style&gt;div {
+</textarea></div></div></div><div class="right"><iframe srcDoc="&lt;html&gt;&lt;style&gt;:root {
+  background: #f4f4f4;
+  padding: 40px;
+}
+div {
   background-color: tomato;
   width: 200px;
   height: 40px;
-
   color: white;
   font-weight: bold;
   text-align: center;
   line-height: 40px;
-
   border-radius: 20px;
   box-shadow: 0px 1px 7px rgba(0, 0, 0, 0.3);
-
   transition: 0.3s;
 }
 
@@ -147,4 +91,4 @@ div:hover {
   transform: scale(1.05, 1.05);
 }
 &lt;/style&gt;&lt;body&gt;&lt;div&gt;こんにちは&lt;/div&gt;
-&lt;/body&gt;&lt;/html&gt;"></iframe></div></div></div><div class="markdown__Wapper-r4y4ur-0 hEGkZd"></div></div></div></div></div></div><div id="gatsby-announcer" style="position:absolute;top:0;width:1px;height:1px;padding:0;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0" aria-live="assertive" aria-atomic="true"></div></div><script id="gatsby-script-loader">/*<![CDATA[*/window.pagePath="/dd2a587f-bd49-56af-9097-8fc4b1f9cef1";/*]]>*/</script><script id="gatsby-chunk-mapping">/*<![CDATA[*/window.___chunkMapping={"app":["/app-424ad1c5c963d9d96c97.js"],"component---src-pages-index-tsx":[],"component---src-templates-post-tsx":["/component---src-templates-post-tsx-0e6772cb1f696542156d.js"]};/*]]>*/</script><script src="/css-traning-book/component---src-templates-post-tsx-0e6772cb1f696542156d.js" async=""></script><script src="/css-traning-book/commons-5000b7f97d5edcb2ad78.js" async=""></script><script src="/css-traning-book/9f96d65d-ac4e9b326d079790e9ed.js" async=""></script><script src="/css-traning-book/app-424ad1c5c963d9d96c97.js" async=""></script><script src="/css-traning-book/styles-2c8cc638826070126d54.js" async=""></script><script src="/css-traning-book/framework-16534ddc5a576711dd15.js" async=""></script><script src="/css-traning-book/webpack-runtime-e37454bbe190af58e03b.js" async=""></script></body></html>
+&lt;/body&gt;&lt;/html&gt;"></iframe></div></div></div><div class="markdown__Wapper-r4y4ur-0 hEGkZd"></div></div></div></div></div></div></div></div><div id="gatsby-announcer" style="position:absolute;top:0;width:1px;height:1px;padding:0;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0" aria-live="assertive" aria-atomic="true"></div></div><script id="gatsby-script-loader">/*<![CDATA[*/window.pagePath="/dd2a587f-bd49-56af-9097-8fc4b1f9cef1";/*]]>*/</script><script id="gatsby-chunk-mapping">/*<![CDATA[*/window.___chunkMapping={"app":["/app-424ad1c5c963d9d96c97.js"],"component---src-pages-index-tsx":[],"component---src-templates-post-tsx":["/component---src-templates-post-tsx-0e6772cb1f696542156d.js"]};/*]]>*/</script><script src="/css-traning-book/component---src-templates-post-tsx-0e6772cb1f696542156d.js" async=""></script><script src="/css-traning-book/commons-2dfb79fc5f9804c33e43.js" async=""></script><script src="/css-traning-book/9f96d65d-ac4e9b326d079790e9ed.js" async=""></script><script src="/css-traning-book/app-424ad1c5c963d9d96c97.js" async=""></script><script src="/css-traning-book/styles-2c8cc638826070126d54.js" async=""></script><script src="/css-traning-book/framework-16534ddc5a576711dd15.js" async=""></script><script src="/css-traning-book/webpack-runtime-c2ff342399fcbd9d78f0.js" async=""></script></body></html>
