--- a/78ec6489-963d-5db0-b57b-97994b74930b/index.html
+++ b/78ec6489-963d-5db0-b57b-97994b74930b/index.html
@@ -6,33 +6,33 @@
 .dRgrav ul li a{position:absolute;top:0;left:0;right:0;bottom:0;line-height:30px;-webkit-text-decoration:none;text-decoration:none;padding:10px;color:#333;}/*!sc*/
 .dRgrav ul li a.active{font-weight:bold;}/*!sc*/
 data-styled.g1[id="menu__Wrapper-mgbnnx-0"]{content:"dRgrav,"}/*!sc*/
+.cOTzMu{height:400px;background:black;overflow:scroll;}/*!sc*/
+.cOTzMu .editor{position:relative;}/*!sc*/
+.cOTzMu .editor .sync{padding:10px;margin:0;font-family:Consolas,Monaco,"Andale Mono","Ubuntu Mono",monospace;white-space:pre-wrap;line-height:1.5em;word-wrap:break-word;font-size:16px;}/*!sc*/
+.cOTzMu .editor textarea{position:absolute;top:0;left:0;width:100%;height:100%;resize:none;color:transparent;background:transparent;caret-color:red;border:none;outline:none;}/*!sc*/
+.cOTzMu .editor pre{position:relative;pointer-events:none;}/*!sc*/
+data-styled.g2[id="codeEditor__Wrapper-c239u8-0"]{content:"cOTzMu,"}/*!sc*/
+.vTpej{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;margin:60px 0px;}/*!sc*/
+.vTpej *{box-sizing:border-box;}/*!sc*/
+.vTpej .left{width:100%;margin-right:20px;}/*!sc*/
+.vTpej .right{width:100%;background:white;}/*!sc*/
+.vTpej .right iframe{border:none;width:100%;height:100%;}/*!sc*/
+data-styled.g3[id="liveEditor__Wrapper-pk3rpr-0"]{content:"vTpej,"}/*!sc*/
+.hEGkZd h1,.hEGkZd h2,.hEGkZd h3,.hEGkZd h4{color:var(--theme-color);}/*!sc*/
+data-styled.g4[id="markdown__Wapper-r4y4ur-0"]{content:"hEGkZd,"}/*!sc*/
 .bVotRQ{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;height:100vh;}/*!sc*/
 .bVotRQ .header{padding:20px;border-bottom:1px #bbb solid;-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;}/*!sc*/
 .bVotRQ .header h1{margin:0px;}/*!sc*/
 .bVotRQ .split{-webkit-flex:auto;-ms-flex:auto;flex:auto;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;}/*!sc*/
 .bVotRQ .split-left{width:350px;border-right:1px solid #bbb;}/*!sc*/
 .bVotRQ .split-right{-webkit-flex:auto;-ms-flex:auto;flex:auto;}/*!sc*/
-data-styled.g2[id="page__Layout-sc-1jl1kxb-0"]{content:"bVotRQ,"}/*!sc*/
+data-styled.g5[id="page__Layout-sc-1jl1kxb-0"]{content:"bVotRQ,"}/*!sc*/
 .kftknV{position:relative;width:100%;height:100%;overflow:auto;}/*!sc*/
 .kftknV > div{position:absolute;top:0;left:0;right:0;bottom:0;}/*!sc*/
-data-styled.g3[id="page__ScrollWrapper-sc-1jl1kxb-1"]{content:"kftknV,"}/*!sc*/
-.cOTzMu{height:400px;background:black;overflow:scroll;}/*!sc*/
-.cOTzMu .editor{position:relative;}/*!sc*/
-.cOTzMu .editor .sync{padding:10px;margin:0;font-family:Consolas,Monaco,"Andale Mono","Ubuntu Mono",monospace;white-space:pre-wrap;line-height:1.5em;word-wrap:break-word;font-size:16px;}/*!sc*/
-.cOTzMu .editor textarea{position:absolute;top:0;left:0;width:100%;height:100%;resize:none;color:transparent;background:transparent;caret-color:red;border:none;outline:none;}/*!sc*/
-.cOTzMu .editor pre{position:relative;pointer-events:none;}/*!sc*/
-data-styled.g4[id="codeEditor__Wrapper-c239u8-0"]{content:"cOTzMu,"}/*!sc*/
-.vTpej{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;margin:60px 0px;}/*!sc*/
-.vTpej *{box-sizing:border-box;}/*!sc*/
-.vTpej .left{width:100%;margin-right:20px;}/*!sc*/
-.vTpej .right{width:100%;background:white;}/*!sc*/
-.vTpej .right iframe{border:none;width:100%;height:100%;}/*!sc*/
-data-styled.g5[id="liveEditor__Wrapper-pk3rpr-0"]{content:"vTpej,"}/*!sc*/
-.hEGkZd h1,.hEGkZd h2,.hEGkZd h3,.hEGkZd h4{color:var(--theme-color);}/*!sc*/
-data-styled.g6[id="markdown__Wapper-r4y4ur-0"]{content:"hEGkZd,"}/*!sc*/
-</style><link as="script" rel="preload" href="/css-traning-book/webpack-runtime-c2ff342399fcbd9d78f0.js"/><link as="script" rel="preload" href="/css-traning-book/framework-16534ddc5a576711dd15.js"/><link as="script" rel="preload" href="/css-traning-book/styles-2c8cc638826070126d54.js"/><link as="script" rel="preload" href="/css-traning-book/app-424ad1c5c963d9d96c97.js"/><link as="script" rel="preload" href="/css-traning-book/9f96d65d-ac4e9b326d079790e9ed.js"/><link as="script" rel="preload" href="/css-traning-book/commons-2dfb79fc5f9804c33e43.js"/><link as="script" rel="preload" href="/css-traning-book/component---src-templates-post-tsx-0e6772cb1f696542156d.js"/><link as="fetch" rel="preload" href="/css-traning-book/page-data/78ec6489-963d-5db0-b57b-97994b74930b/page-data.json" crossorigin="anonymous"/><link as="fetch" rel="preload" href="/css-traning-book/page-data/app-data.json" crossorigin="anonymous"/></head><body><div id="___gatsby"><div style="outline:none" tabindex="-1" id="gatsby-focus-wrapper"><div class="page__Layout-sc-1jl1kxb-0 bVotRQ"><header class="header"><h1>CSS Traning</h1></header><div class="split"><div class="split-left"><div class="menu__Wrapper-mgbnnx-0 dRgrav"><div><h3>section.title</h3><ul><li><a href="/css-traning-book/6711d541-4b41-588e-b5b3-78d95fcb839f">右寄せにする方法</a></li><li><a href="/css-traning-book/38f24678-33b0-597b-8659-d87d948299ac">チェックボックスのスタイリング</a></li><li><a href="/css-traning-book/ab1ff15f-ca56-5c3b-a7ac-3014bc477566">比率でレイアウトを組む</a></li><li><a href="/css-traning-book/ecb7009c-4298-51d4-a821-958542e839fb">中央寄せにする方法</a></li><li><a href="/css-traning-book/53c8f2ba-947d-5529-89df-6ff40bf3e13c">スクロールビュー</a></li><li><a aria-current="page" class="active" href="/css-traning-book/78ec6489-963d-5db0-b57b-97994b74930b">グリッドレイアウト with Flexbox</a></li><li><a href="/css-traning-book/2c2c8630-1dc9-5fd4-b73f-2fbc33a39134">Flexboxでのレイアウト実装例</a></li><li><a href="/css-traning-book/dd2a587f-bd49-56af-9097-8fc4b1f9cef1">ボタンのスタイリング</a></li></ul></div><div><h3>section.title</h3><ul><li><a href="/css-traning-book/d11d396e-dbb1-5cbb-92d6-39fbc26ffe85">ブログとかの一覧画面</a></li></ul></div><div><h3>section.title</h3><ul><li><a href="/css-traning-book/6fbeba97-c9ff-585b-8bc3-a98897ce1991">失敗集</a></li></ul></div></div></div><div class="split-right"><div class="page__ScrollWrapper-sc-1jl1kxb-1 kftknV"><div><div style="padding:40px"><div><h1></h1></div><div class="markdown__Wapper-r4y4ur-0 hEGkZd"><p>共通 CSS</p></div><div class="markdown__Wapper-r4y4ur-0 hEGkZd"><pre><code class="language-css">* {
+data-styled.g6[id="page__ScrollWrapper-sc-1jl1kxb-1"]{content:"kftknV,"}/*!sc*/
+</style><link as="script" rel="preload" href="/css-traning-book/webpack-runtime-6d6331df08178d3182a1.js"/><link as="script" rel="preload" href="/css-traning-book/framework-dd95e8b3d258d85252e9.js"/><link as="script" rel="preload" href="/css-traning-book/styles-14b7960238218173d3fe.js"/><link as="script" rel="preload" href="/css-traning-book/app-81102ce432321569ad25.js"/><link as="script" rel="preload" href="/css-traning-book/9f96d65d-ac4e9b326d079790e9ed.js"/><link as="script" rel="preload" href="/css-traning-book/commons-aad4b538bed5bbde904f.js"/><link as="script" rel="preload" href="/css-traning-book/component---src-templates-post-tsx-075f63a68bcd6138cfc0.js"/><link as="fetch" rel="preload" href="/css-traning-book/page-data/78ec6489-963d-5db0-b57b-97994b74930b/page-data.json" crossorigin="anonymous"/><link as="fetch" rel="preload" href="/css-traning-book/page-data/app-data.json" crossorigin="anonymous"/></head><body><div id="___gatsby"><div style="outline:none" tabindex="-1" id="gatsby-focus-wrapper"><div class="page__Layout-sc-1jl1kxb-0 bVotRQ"><header class="header"><h1>CSS Traning</h1></header><div class="split"><div class="split-left"><div class="menu__Wrapper-mgbnnx-0 dRgrav"><div><h3>section.title</h3><ul><li><a href="/css-traning-book/6711d541-4b41-588e-b5b3-78d95fcb839f">右寄せにする方法</a></li><li><a href="/css-traning-book/ab1ff15f-ca56-5c3b-a7ac-3014bc477566">比率でレイアウトを組む</a></li><li><a href="/css-traning-book/ecb7009c-4298-51d4-a821-958542e839fb">中央寄せにする方法</a></li><li><a aria-current="page" class="active" href="/css-traning-book/78ec6489-963d-5db0-b57b-97994b74930b">グリッドレイアウト with Flexbox</a></li><li><a href="/css-traning-book/2c2c8630-1dc9-5fd4-b73f-2fbc33a39134">Flexboxでのレイアウト実装例</a></li><li><a href="/css-traning-book/dd2a587f-bd49-56af-9097-8fc4b1f9cef1">ボタンのスタイリング</a></li><li><a href="/css-traning-book/53c8f2ba-947d-5529-89df-6ff40bf3e13c">スクロールビュー</a></li><li><a href="/css-traning-book/38f24678-33b0-597b-8659-d87d948299ac">チェックボックスのスタイリング</a></li></ul></div><div><h3>section.title</h3><ul><li><a href="/css-traning-book/58437c45-b837-5ba3-bacc-a96db063e945">Chromeのダイアログ</a></li><li><a href="/css-traning-book/d11d396e-dbb1-5cbb-92d6-39fbc26ffe85">ブログとかの一覧画面</a></li></ul></div><div><h3>section.title</h3><ul><li><a href="/css-traning-book/6fbeba97-c9ff-585b-8bc3-a98897ce1991">失敗集</a></li></ul></div></div></div><div class="split-right"><div class="page__ScrollWrapper-sc-1jl1kxb-1 kftknV"><div><div style="padding:40px"><div><h1></h1></div><div class="markdown__Wapper-r4y4ur-0 hEGkZd"><p>共通 CSS</p></div><div class="markdown__Wapper-r4y4ur-0 hEGkZd"><pre><code class="language-css">:root {
   background: #f4f4f4;
-  border: 1px solid #bbb;
+  padding: 40px;
 }</code></pre></div><div class="markdown__Wapper-r4y4ur-0 hEGkZd"><h3>レイアウト 1</h3><p>親の高さを画面いっぱいにする
 header の高さを指定する
 flex:auto;を指定して body が広がるようにする。
@@ -72,10 +72,12 @@ body のコンテントが大きいと縮まってしまうので flex</p></div>
 .cell {
   width: 100px;
   height: 100px;
-  backgroud: white;
+  line-height: 100px;
+  text-align: center;
+  border: 1px solid white;
 }
 .cell:hover {
-  background: #f3f3f3;
+  background: white;
 }
 </code></pre><textarea class="sync">.grid {
   padding: 10px;
@@ -87,14 +89,16 @@ body のコンテントが大きいと縮まってしまうので flex</p></div>
 .cell {
   width: 100px;
   height: 100px;
-  backgroud: white;
+  line-height: 100px;
+  text-align: center;
+  border: 1px solid white;
 }
 .cell:hover {
-  background: #f3f3f3;
+  background: white;
 }
-</textarea></div></div></div><div class="right"><iframe srcDoc="&lt;html&gt;&lt;style&gt;* {
+</textarea></div></div></div><div class="right"><iframe srcDoc="&lt;html&gt;&lt;style&gt;:root {
   background: #f4f4f4;
-  border: 1px solid #bbb;
+  padding: 40px;
 }
 .grid {
   padding: 10px;
@@ -106,10 +110,12 @@ body のコンテントが大きいと縮まってしまうので flex</p></div>
 .cell {
   width: 100px;
   height: 100px;
-  backgroud: white;
+  line-height: 100px;
+  text-align: center;
+  border: 1px solid white;
 }
 .cell:hover {
-  background: #f3f3f3;
+  background: white;
 }
 &lt;/style&gt;&lt;body&gt;&lt;div class=&quot;grid&quot;&gt;
   &lt;div class=&quot;cell&quot;&gt;item&lt;/div&gt;
@@ -124,4 +130,4 @@ body のコンテントが大きいと縮まってしまうので flex</p></div>
   &lt;div class=&quot;cell&quot;&gt;item&lt;/div&gt;
   &lt;div class=&quot;cell&quot;&gt;item&lt;/div&gt;
 &lt;/div&gt;
-&lt;/body&gt;&lt;/html&gt;"></iframe></div></div></div><div class="markdown__Wapper-r4y4ur-0 hEGkZd"></div></div></div></div></div></div></div></div><div id="gatsby-announcer" style="position:absolute;top:0;width:1px;height:1px;padding:0;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0" aria-live="assertive" aria-atomic="true"></div></div><script id="gatsby-script-loader">/*<![CDATA[*/window.pagePath="/78ec6489-963d-5db0-b57b-97994b74930b";/*]]>*/</script><script id="gatsby-chunk-mapping">/*<![CDATA[*/window.___chunkMapping={"app":["/app-424ad1c5c963d9d96c97.js"],"component---src-pages-index-tsx":[],"component---src-templates-post-tsx":["/component---src-templates-post-tsx-0e6772cb1f696542156d.js"]};/*]]>*/</script><script src="/css-traning-book/component---src-templates-post-tsx-0e6772cb1f696542156d.js" async=""></script><script src="/css-traning-book/commons-2dfb79fc5f9804c33e43.js" async=""></script><script src="/css-traning-book/9f96d65d-ac4e9b326d079790e9ed.js" async=""></script><script src="/css-traning-book/app-424ad1c5c963d9d96c97.js" async=""></script><script src="/css-traning-book/styles-2c8cc638826070126d54.js" async=""></script><script src="/css-traning-book/framework-16534ddc5a576711dd15.js" async=""></script><script src="/css-traning-book/webpack-runtime-c2ff342399fcbd9d78f0.js" async=""></script></body></html>
+&lt;/body&gt;&lt;/html&gt;"></iframe></div></div></div><div class="markdown__Wapper-r4y4ur-0 hEGkZd"></div></div></div></div></div></div></div></div><div id="gatsby-announcer" style="position:absolute;top:0;width:1px;height:1px;padding:0;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0" aria-live="assertive" aria-atomic="true"></div></div><script id="gatsby-script-loader">/*<![CDATA[*/window.pagePath="/78ec6489-963d-5db0-b57b-97994b74930b";/*]]>*/</script><script id="gatsby-chunk-mapping">/*<![CDATA[*/window.___chunkMapping={"app":["/app-81102ce432321569ad25.js"],"component---src-pages-index-tsx":["/component---src-pages-index-tsx-705233a43ade5e4ee703.js"],"component---src-templates-post-tsx":["/component---src-templates-post-tsx-075f63a68bcd6138cfc0.js"]};/*]]>*/</script><script src="/css-traning-book/component---src-templates-post-tsx-075f63a68bcd6138cfc0.js" async=""></script><script src="/css-traning-book/commons-aad4b538bed5bbde904f.js" async=""></script><script src="/css-traning-book/9f96d65d-ac4e9b326d079790e9ed.js" async=""></script><script src="/css-traning-book/app-81102ce432321569ad25.js" async=""></script><script src="/css-traning-book/styles-14b7960238218173d3fe.js" async=""></script><script src="/css-traning-book/framework-dd95e8b3d258d85252e9.js" async=""></script><script src="/css-traning-book/webpack-runtime-6d6331df08178d3182a1.js" async=""></script></body></html>
